Fixed alignment for cards. Added side search menu. Need to fix search criteria.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,70 @@
+body {
+max-width: 100%;
+overflow-x: hidden;
+padding: 30px;
+}
+
 img{
-  display:flex;
-  justify-content: space-around;
-  max-width: 100%;
+  /* display:flex;
+  justify-content: space-around; */
+  max-width: 200px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
+  grid-gap: 30px;
+  align-items: center;
+}
+
+.grid .user-details {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr;
+  grid-gap: 35px;
+  align-items: center;
+}
+
+#header{
+  padding: 30px;
 }
 
 
-.row {
+/* .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center; */
+/*  */
+
+/* .wrapper {
+  padding: 0 30px;
+  margin: 0 auto;
+  max-width: 1180px;
+} */
+
+/* .row {
   display: flex;
 }
 
@@ -16,7 +75,7 @@ img{
 .gallery{
   width: 10px;
   padding: 50px 0;
-}
+} */
 
 .navbar {
   background: none;
@@ -53,7 +112,7 @@ img{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-} */ */
+} */ 
 
 /* .flex-container > * {
   flex-basis: 50%
@@ -77,7 +136,7 @@ img{
   height: 100%;
 } */
 
-
+/* 
 .image-grid {
   --gap: 16px;
   --num-cols: 4;
@@ -104,5 +163,4 @@ image-grid > img {
   .image-grid {
     --num-cols: 2;
     --row-height: 200px;
-  }
-}
+  } */
